--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,13 +1,45 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>{% block title %}Bookstore{% endblock title %}</title>
+<title>{% block title %}Домашняя{% endblock title %}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1,
+shrink-to-fit=no">
+<!-- CSS -->
+
+<link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
+<header>
+<!-- Fixed navbar -->
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4
+mb-3 bg-white border-bottom shadow-sm">
+<a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto
+font-weight-normal">Домашняя</a>
+<a href="{% url 'book_list' %}" class="navbar-brand my-0 mr-md-auto
+font-weight-normal">Работы Ferum</a>
+
+    
+<a class="p-2 text-dark" href="{% url 'about' %}">О нас</a>
+<a class="p-2 text-dark" href="{% url 'create' %}">Добавить работу</a>
+{% if user.is_authenticated %}
+<a class="p-2 text-dark" href="{% url 'account_logout' %}">Выйти</a>
+{% else %}
+<a class="p-2 text-dark" href="{% url 'account_login' %}">Залогиниться</a>
+<a class="btn btn-outline-primary" href="{% url 'account_signup' %}">Зарегистрироваться</a>
+{% endif %}
+</nav>
+</div>
+</header>
 <div class="container">
 {% block content %}
 {% endblock content %}
 </div>
+<!-- JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </body>
 </html>
