--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Marvel HTML Bootstrap 4 Template</title>
+    <title>Ferum</title>
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
     <link rel="stylesheet" href="{% static 'css/unicons.css'%}">
@@ -19,13 +19,7 @@
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="{% static 'css/tooplate-style.css'%}">
     
-<!--
 
-Tooplate 2115 Marvel
-
-https://www.tooplate.com/view/2115-marvel
-
--->
   </head>
   <body>
 
@@ -61,7 +55,7 @@ https://www.tooplate.com/view/2115-marvel
                     <div class="ml-lg-4">
                       <div class="color-mode d-lg-flex justify-content-center align-items-center">
                         <i class="color-mode-icon"></i>
-                        Color mode
+                        Цветовой режим
                       </div>
                     </div>
                 </ul>
@@ -76,17 +70,17 @@ https://www.tooplate.com/view/2115-marvel
                 
                 <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
-                        <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
-                        <h1 class="animated animated-text">
-                            <span class="mr-2"> </span>
+                      <small class="small-text">Добро пожаловать <span class="mobile-block"> на сайт моего портфолио!</span></small>
+                      <h1 class="animated animated-text">
+                            <span class="mr-2"> Привет я Ferum</span>
                                 <div class="animated-info">
-                                    <span class="animated-item">Привет я Ferum</span>
                                     <span class="animated-item">Веб дизайнер</span>
                                     <span class="animated-item">Художник</span>
+                                    <span class="animated-item">Аниматор</span>
                                 </div>
                         </h1>
 
-                        <p>Building a successful product is a challenge. I am highly energetic in user experience design, interfaces and web development.</p>
+                        <p>Создание успешного продукта - непростая задача. Я имею опыт создании интерфейсов и веб-дизайна.</p>
                         
 
                     </div>
@@ -95,7 +89,7 @@ https://www.tooplate.com/view/2115-marvel
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
 
-                        <img src="{% static 'images/undraw/undraw_software_engineer_lvl5.svg'%}" class="img-fluid" alt="svg image">
+                        <img src="{% static 'images/undraw/undraw_software.svg'%}" class="img-fluid" alt="svg image">
                     </div>
                 </div>
 
