--- a/static/css/tooplate-style.css
+++ b/static/css/tooplate-style.css
@@ -1,15 +1,9 @@
-/*
+.bookcover {
+  width: auto;
+  }
 
-Tooplate 2115 Marvel
-
-https://www.tooplate.com/view/2115-marvel
-
-*/
-
-
-@import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,700");
 body {
-  font-family: "Maven Pro", sans-serif;
+  font-family: sans-serif;
   padding-top: 70px;
 }
 
@@ -19,7 +13,7 @@ body {
 
 .small-text {
   color: #5b5b5b;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: bold;
   padding: 8px 16px;
   border-radius: 50px;
