--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,45 +1,67 @@
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>{% block title %}Домашняя{% endblock title %}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1,
-shrink-to-fit=no">
-<!-- CSS -->
 
-<link rel="stylesheet" href="{% static 'css/base.css' %}">
-</head>
-<body>
-<header>
-<!-- Fixed navbar -->
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4
-mb-3 bg-white border-bottom shadow-sm">
-<a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto
-font-weight-normal">Домашняя</a>
-<a href="{% url 'book_list' %}" class="navbar-brand my-0 mr-md-auto
-font-weight-normal">Работы Ferum</a>
+<!doctype html>
+<html lang="ru">
 
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Ferum</title>
+
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/unicons.css'%}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css'%}">
+
+    <!-- MAIN STYLE -->
+    <link rel="stylesheet" href="{% static 'css/tooplate-style.css'%}">
     
-<a class="p-2 text-dark" href="{% url 'about' %}">О нас</a>
-<a class="p-2 text-dark" href="{% url 'create' %}">Добавить работу</a>
-{% if user.is_authenticated %}
-<a class="p-2 text-dark" href="{% url 'account_logout' %}">Выйти</a>
-{% else %}
-<a class="p-2 text-dark" href="{% url 'account_login' %}">Залогиниться</a>
-<a class="btn btn-outline-primary" href="{% url 'account_signup' %}">Зарегистрироваться</a>
-{% endif %}
-</nav>
-</div>
-</header>
-<div class="container">
-{% block content %}
-{% endblock content %}
-</div>
-<!-- JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
+  <body>
+
+    <!-- MENU -->
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'home' %}" class="uil uil-user">Ferum</a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'gallery_list' %}" class="nav-link"><span data-hover="Мои работы">Мои работы</span></a>
+                    </li>
+
+
+
+                </ul>
+
+                <ul class="navbar-nav ml-lg-auto">
+                    <div class="ml-lg-4">
+                      <div class="color-mode d-lg-flex justify-content-center align-items-center">
+                        <i class="color-mode-icon"></i>
+                        Color mode
+                      </div>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 </body>
 </html>
